调整文件结构，修改相应路径

--- a/live2d.html
+++ b/live2d.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
         <title>live2d</title>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-    <script src="pixi.min.js"></script>
+    <script src="pixi/pixi.min.js"></script>
     <script src="core/live2dcubismcore.min.js"></script>
     <script src="framework/live2dcubismframework.js"></script>
     <script src="framework/live2dcubismpixi.js"></script>
